# Mabble

./: .gitattributes  .gitmodules  CMakeLists.txt  mabble.json
cmake/: build_library.cmake  thirdparty.cmake  version.cmake
include/: mabble.h
include/mabble/: mabble.h
include/renderer/: Vertex.h  ibo.h  lights.h  mesh.h  model.h  renderer.h  ssbo.h  textures.h  vao.h  vbo.h
include/tests/: Test.h  TestBasicLights.h  TestLoadModel.h
shaders/BasicLights/: Cube.frag  Cube.vert
shaders/Default/: fragment.frag  normal.vert  vertex.vert
shaders/LightCasters/: Cube.vert
shaders/LightMapping/: Cube.vert
shaders/LoadingModel/: Model.frag
src/: CMakeLists.txt  main.cpp
src/core/: core.h  temp.cpp  temp.h
src/renderer/: ibo.cpp  mesh.cpp  model.cpp  renderer.cpp  ssbo.cpp  vao.cpp  vbo.cpp
src/tests/: Test.cpp  TestBasicLights.cpp  TestLoadModel.cpp
tests/: CMakeLists.txt  mbtpch.cpp  mbtpch.h
tests/core/: Application.cpp  Application.h  Assert.h  Base.h  Input.h  KeyCodes.h  MouseCodes.h  Platforms.h  Test.h  Window.cpp  Window.h  main.cpp
tests/core/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
tests/core/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
tests/core/utils/: PlatformUtils.h
tests/debug/: Logger.cpp  Logger.h
